@@ -2,4 +2,5 @@
 .Rhistory
 .RData
 scratchpad_sounds
+scratchpad
 blog_posts
