@@ -5,6 +5,7 @@ beepr 1.3.9000
 * Removed the dependency on `stringr`. (#42)
 * Allowed `beep(-1)` or `beep("none")` to result in no sound being played.  (#29)
 * Fixed a bug where the download sound-option did not work on Windows. (#41)
+* Changed the Linux sound player priority order to aplay -> paplay -> vlc. (#39)
 
 beepr 1.3
 ===========
